# backend/outputSwagger.json
@@ -434,6 +434,82 @@
           }
         }
       }
+    },
+    "/locador/listar": {
+      "get": {
+        "tags": [
+          "Locadores"
+        ],
+        "summary": "Lista os locadores cadastrados",
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/locador/oter/{idLocador}": {
+      "get": {
+        "tags": [
+          "Locadores"
+        ],
+        "summary": "Obtem um locador cadastrado",
+        "description": "",
+        "parameters": [
+          {
+            "name": "idLocador",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/locatario/listar": {
+      "get": {
+        "tags": [
+          "Locatarios"
+        ],
+        "summary": "Lista os locatarios cadastrados",
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/locatario/obter/{idLocatario}": {
+      "get": {
+        "tags": [
+          "Locatarios"
+        ],
+        "summary": "Obtem um locatario cadastrado",
+        "description": "",
+        "parameters": [
+          {
+            "name": "idLocatario",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
     }
   },
   "components": {
@@ -543,6 +619,40 @@
           "idLocador": {
             "type": "number",
             "example": 1
+          }
+        }
+      },
+      "locador": {
+        "type": "object",
+        "properties": {
+          "idLocador": {
+            "type": "number",
+            "example": 1
+          },
+          "cpfLocador": {
+            "type": "string",
+            "example": "111.111.111-11"
+          },
+          "nomeLocador": {
+            "type": "string",
+            "example": "Alfredo"
+          }
+        }
+      },
+      "locatario": {
+        "type": "object",
+        "properties": {
+          "idLocatario": {
+            "type": "number",
+            "example": 1
+          },
+          "nomeLocatario": {
+            "type": "string",
+            "example": "111.111.111-11"
+          },
+          "cpfLocatario": {
+            "type": "string",
+            "example": "Rodolfinho"
           }
         }
       }
