# backend/server.js
@@ -5,6 +5,8 @@ const usuarioRoute = require('./route/usuarioRoute');
 const contratoRoute = require('./route/contratoRoute');
 const aluguelRoute = require('./route/aluguelRoute');
 const imovelRoute = require('./route/imovelRoute');
+const locadorRoute = require('./route/locadorRoute');
+const locatarioRoute = require('./route/locatarioRoute');
 
 const cors = require('cors');
 
@@ -18,6 +20,8 @@ app.use('/usuarios', usuarioRoute);
 app.use('/contratos', contratoRoute);
 app.use('/aluguel', aluguelRoute);
 app.use('/imovel', imovelRoute);
+app.use('/locador', locadorRoute);
+app.use('/locatario', locatarioRoute);
 
 app.listen(porta, () =>{
     console.log(`Servidor rodando na porta ${porta}`);
